# eigolingo

./: 1984.txt  LICENSE  README.md  contraction_dict.txt  eigolingo.py  generate_spacy_wordlist.ipynb  pyproject.toml  wordlist70.txt
eigolingo/: __init__.py
eigolingo/wdicts/: contraction_dict.txt  dict80.txt  dict95.txt
lists/: README.md  add_entries.txt  additional_removal.txt  change_dictionary.txt  chemistry.dic  cities.txt  countries.txt  create70hacknoroman.txt  create80hacknoroman.txt  en-drv-1610-douay-rheims-bible-1-0.dic  en-kjv-1611-king-james-bible-1-0.dic  engterms.txt  letters_to_filter.txt
