[tool.poetry]
name = "eigolingo"
version = "0.0.2"
description = "Determine the number of unique words in a given text/string"
authors = ["exc4l <cps0537@gmail.com>"]
readme = "README.md"
keywords = ["english", "linguistics", "unique words"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: English"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eigo = "eigolingo:main"
